[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elsim"
dynamic = ["version"]
description = "Election simulation and analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6.2"
authors = [
    { email = "endolith@gmail.com" },
]
keywords = [
    "elections",
    "voting",
    "social",
    "choice",
    "theory",
]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Sociology",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "ruff",
]
examples = [
    "tabulate",
    "joblib",
]
fast = [
    # Reflected ``set`` in IRV/Coombs @njit still compiles through current Numba;
    # cap bumped as new minors are smoke-tested via Dependabot. See ``elsim.methods._common``.
    "numba>=0.52,<0.61",
]
docs = [
    "sphinx>=6",
    "myst-parser",
    "sphinxcontrib-mermaid",
    "numpydoc",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
    "linkify-it-py",
]

[project.urls]
Homepage = "https://github.com/endolith/elsim"
Documentation = "https://endolith.github.io/elsim/"

[tool.hatch.version]
path = "elsim/__init__.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=examples --cov --cov-report html --tb=short"
doctest_optionflags = ["ELLIPSIS"]
