[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elsim"
dynamic = ["version"]
description = "Election simulation and analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { email = "endolith@gmail.com" },
]
keywords = [
    "elections",
    "voting-methods",
    "ranked-choice-voting",
    "approval-voting",
    "social-choice",
    "monte-carlo",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Sociology",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "ruff",
]
examples = [
    "tabulate",
    "joblib",
    "hypothesis",
    # Plotting stack: wheels must match the installed NumPy ABI (NumPy 2 vs 1.x).
    # Use pip install -e ".[examples]" (or include examples in extras); conda-installed
    # matplotlib built against NumPy 1.x may still need: pip install --upgrade matplotlib
    "matplotlib>=3.8",
    "contourpy>=1.3",
    "seaborn>=0.13",
    "pyehtplot",
]
fast = [
    "numba>=0.52",
]
docs = [
    "sphinx>=6",
    "myst-parser",
    "sphinxcontrib-mermaid",
    "numpydoc",
    "sphinxcontrib-apidoc",
    "linkify-it-py",
]

[project.urls]
Homepage = "https://github.com/endolith/elsim"
Documentation = "https://endolith.github.io/elsim/"

[tool.hatch.version]
path = "elsim/__init__.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=examples --cov --cov-report html --tb=short"
doctest_optionflags = ["ELLIPSIS"]
